src/objects/MUSW__Permit2__c.object
<CustomObject>
    <fields>
        <fullName>MUSW__Use_Group__c</fullName>
        <description>Zoning classification categories of how this permitted structure will be used.</description>
        <inlineHelpText>from the International Building Code of ICC</inlineHelpText>
        <label>Use Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R-3</fullName>
                    <default>true</default>
                    <label>R-3</label>
                </value>
                <value>
                    <fullName>R-1</fullName>
                </value>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>R-4</fullName>
                </value>
                <value>
                    <fullName>A-1</fullName>
                </value>
                <value>
                    <fullName>A-2</fullName>
                </value>
                <value>
                    <fullName>A-3</fullName>
                </value>
                <value>
                    <fullName>A-4</fullName>
                </value>
                <value>
                    <fullName>A-5</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F-1</fullName>
                </value>
                <value>
                    <fullName>F-2</fullName>
                </value>
                <value>
                    <fullName>H-1</fullName>
                </value>
                <value>
                    <fullName>H-2</fullName>
                </value>
                <value>
                    <fullName>H-3</fullName>
                </value>
                <value>
                    <fullName>H-4</fullName>
                </value>
                <value>
                    <fullName>H-5</fullName>
                </value>
                <value>
                    <fullName>I-1</fullName>
                </value>
                <value>
                    <fullName>I-2</fullName>
                </value>
                <value>
                    <fullName>I-3</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>S-1</fullName>
                </value>
                <value>
                    <fullName>S-2</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Use_Type__c</fullName>
        <description>Classification general categories of how this permitted structure will be used.</description>
        <label>Use Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Multi Family Dwelling</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Single Family Dwelling</fullName>
                    <default>true</default>
                    <label>Single Family Dwelling</label>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Valuation__c</fullName>
        <description>Dollar estimation of the construction value.</description>
        <label>Valuation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Work_Type__c</fullName>
        <description>Type of work that this permit has requested for approval.</description>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Alteration</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Zip__c</fullName>
        <description>Zip or Postal Code location of permit. This may include street number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip/ Post Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_or_Standard_Organization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manufacturer or Standard Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then the record will be deleted using batch class</description>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metering_and_or_Monitoring_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metering and/or Monitoring Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Miscellaneous Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Submittal_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Submittal Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Notification_Attempt__c</fullName>
        <description>Next Notification Attempt</description>
        <label>Next Notification Attempt</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Notification_Date__c</fullName>
        <description>Next Notification Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Fee_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No  Fee Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Pit_Privies_70_each__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Pit Privies ($70 each)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Pit_Privies_90_each__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Pit Privies ($90 each)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <label>Number of Sites (New or Added)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-175</fullName>
                </value>
                <value>
                    <fullName>175+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>This field indicates whether the current record is a Plan Review or a Permit. This field has been created instead of using Record Types since there could be multiple record types defined for Plan Reviews and Permits.</description>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Plan Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Component_Manual_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Component Manual Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Contact_Person__c</fullName>
        <description>Owner Contact Person</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Customer_Number__c</fullName>
        <description>Owner Customer Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This refers to the permit type being applied for as defined by the program area</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This refers to the program area being applied for as defined by the application type</description>
        <label>Program Area</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner_s_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Owner&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner_s_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Owner&apos;s Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Public_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Public Address - lookup on Parcel</description>
        <label>Public Address</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Permits (Public Address)</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Lookup_Permit_Type__c</fullName>
        <description>Public Lookup Permit Types based on Application Type</description>
        <label>Public Lookup Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Eligible_Start_Date__c</fullName>
        <description>Date when a permit becomes renewal eligible - it is based on expiration date and logic from Global Table- Renewal_Reinstatement_Eligibility__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Eligible Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement of Existing System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_for_Deletion_Date__c</fullName>
        <description>Request for Deletion Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request for Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request for Deletion</description>
        <label>Request for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Hours_Based_on_Answers__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>To store review hours based on applicant answers which will then be used by DRE to compute the total estimated time required for review completion</description>
        <label>Review Hours Based on Answers</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_for_Previously_Approved_Plan__c</fullName>
        <formula>IF(Permit2__c != NUll , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision for Previously Approved Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revisions_to_Miscellaneous_Revisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revisions to Miscellaneous Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPS_Site_Number__c</fullName>
        <description>SPS Site Number (if known)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SPS Site Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanitary_Permit_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sanitary Permit Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>This helps in portal validation.</description>
        <label>Section Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soil_Saturation_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soil Saturation Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Owned_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Owned Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Last_Updated_On__c</fullName>
        <description>To capture when was the status last changed- used to auto close/abandon inactive applications</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Sub-status is a dependent picklist driven off of Status.</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivision_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subdivision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype picklist for Permits</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Business</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_in_Fill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System in Fill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Component_Manual__c</fullName>
        <label>Type of Component Manual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At-Grade Component Manual</fullName>
                </value>
                <value>
                    <fullName>In-ground Component Manual</fullName>
                </value>
                <value>
                    <fullName>Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>Pressure Distribution Component Manual</fullName>
                </value>
                <value>
                    <fullName>Other - Please specify</fullName>
                </value>
                <value>
                    <fullName>At-Grade Using Pressure Distribution</fullName>
                </value>
                <value>
                    <fullName>Holding Tank Component Manual</fullName>
                </value>
                <value>
                    <fullName>In-Ground Soil Absorption Component Manual</fullName>
                </value>
                <value>
                    <fullName>Geomat Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>Smart Treat MBBR System Manual</fullName>
                </value>
                <value>
                    <fullName>ELJEN GSF Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>ELJEN GSF In-Ground Component Manual</fullName>
                </value>
                <value>
                    <fullName>Geomat Leaching System In-Ground Component Manual</fullName>
                </value>
                <value>
                    <fullName>EZFlow Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>Infiltrator Chamber Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Component_manual_Review__c</fullName>
        <label>Type of Component manual Review</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Permit_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Review</fullName>
                </value>
                <value>
                    <fullName>Revision or Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Individual_Site_Design__c</fullName>
        <label>Type of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Individual_Site_Design</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Plan_Review__c</fullName>
        <label>Type of Plan Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Plan_Review</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Soil_based__c</fullName>
        <label>Type of Soil Based</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Grade</fullName>
                </value>
                <value>
                    <fullName>Non-Pressurized In-ground</fullName>
                </value>
                <value>
                    <fullName>Pressurize In-ground</fullName>
                </value>
                <value>
                    <fullName>Mound</fullName>
                </value>
                <value>
                    <fullName>Drip-line</fullName>
                </value>
                <value>
                    <fullName>Constructed Wetlands</fullName>
                </value>
                <value>
                    <fullName>Component Manual</fullName>
                    <isActive>false</isActive>
                    <label>Component Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UV_disinfection_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UV disinfection Unit</label>
        <type>Checkbox</type>
    </fields>
    <label>Permit</label>
    <listViews>
        <fullName>MUSW__All1</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Street__c</columns>
        <columns>MUSW__Geolocation__Latitude__s</columns>
        <columns>MUSW__Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <recordTypes>
        <fullName>All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>POWTS_Plan_Review</fullName>
        <active>true</active>
        <description>This is the record type for all Plan Reviews.</description>
        <label>POWTS Plan Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>This is the record type for all permits.</description>
        <label>Permit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Universal_Default_Permit_Record_Type</fullName>
        <active>true</active>
        <description>This is the record type for any plan review/permits.</description>
        <label>Universal Default Permit Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>eSLA_Portal</fullName>
        <active>true</active>
        <description>For Portal user</description>
        <label>eSLA Portal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_Permit_Delegate__c</fullName>
        <label>Create Permit - Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_PermitShare__c</fullName>
        <label>Insert PermitShare</label>
    </sharingReasons>
</CustomObject>